# LangChain

01_LangChain_Model/: 2_ChatModel.py  3_Embedding.py  4_SementicSearch.py  main.py  pyproject.toml
02_Prompts/: 0_Static_Prompt_UI.py  1_Dynamic_Prompt.py  2.1_Prompt_Generator.py  2.2_Prompt_Template.py  3_ChatBot.py  4_ChatPromptTemplate.py  5_MessagePlaceholder.py  pyproject.toml
03_Structured_Output/: 0_typedDict_Demo.py  1_WithStructuredOutput_TypedDict.py  2_WithStructuredOutput_Pydantic.py  4_WithStructuredOutput_json.py  pyproject.toml
04_Output_Parsers/: 01_NormalParsing.py  02_StrOutputParser.py  03_JsonOutputParser.py  04_StructuredOutPar.py  05_PydanticParser.py  pyproject.toml
05_Chains/: 01_simple_chain.py  03_parallel_chain.py  04_conditional_chain.py  pyproject.toml
06_Doc_Loaders/: 01_text_loader.py  02_pdf_loader.py  03_directory_loader.py  04_webBase_loader.py  05_csv_loader.py  pyproject.toml
07_Text_Splitters/: 01_length_based_splitter.py  02_text_structure_based.py  pyproject.toml
