[project]
name = "03-structured-output"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-core>=1.2.23",
    "langchain-google-genai>=4.2.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
